--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,13 +26,13 @@ body.dark-theme {
 body.dark-theme .change-theme{
     background-color: #fff;
 }
-.nav__button-enter {
+.nav__btn-enter {
     width: 15px;
     height: 15px;
     background-color: #fff;
     border-radius: 50%;
 }
-body.dark-theme .nav__button-enter {
+body.dark-theme .nav__btn-enter {
     background-color: #03A696;
 }
 .nav__circle {
